--- a/.plop/template/component/index.ts.hbs
+++ b/.plop/template/component/index.ts.hbs
@@ -1,3 +1,3 @@
-import {{pascalCase name}} from "./{{pascalCase name}}";
+import {{componentName}} from "./{{componentName}}";
 
-export default {{pascalCase name}};
+export default {{componentName}};
