--- a/.plop/template/component/index.ts.hbs
+++ b/.plop/template/component/index.ts.hbs
@@ -1,3 +1,3 @@
-import {{componentName}} from "./{{componentName}}";
+import {{pascalCase componentName}} from "./{{pascalCase componentName}}";
 
-export default {{componentName}};
+export default {{pascalCase componentName}};
